# runtime-commit-gate-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  PRE_REGISTRATION_v1.md  PRE_REGISTRATION_v2.md  PRE_REGISTRATION_v3.md  PRE_REGISTRATION_v4.md  PROVENANCE.md  PUBLIC_DISCLOSURE_BOUNDARY.md  README.md  RESULTS_v1.md  RESULTS_v2.md  RESULTS_v3.md  RESULTS_v4.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
demo/: run_demo.py  run_demo.sh
docs/: challenges.md  commit_gate_rules.md  decision_record_spec.md  entry_guard_spec.md
examples/: expired_decision.json  replayed_nonce.json  valid_decision.json  wrong_object.json
src/: audit.py  decision_record.py  entry_guard.py  gate.py  nonce_ledger.py  predicate_registry.py  recovery.py  server.py  state_store.py
tests/: conftest.py  test_adversarial.py  test_adversarial_battery_v1.py  test_adversarial_battery_v2.py  test_adversarial_battery_v3.py  test_adversarial_battery_v4.py  test_double_approval_extension.py  test_entry_guard.py  test_entry_guard_wiring.py  test_expired_decision_blocks.py  test_invalid_signature_blocks.py  test_no_decision_blocks.py  test_replay_blocks.py  test_replay_persistence.py  test_valid_decision_allows.py  test_wrong_scope_blocks.py
